Fix: Z-index and width consistency

--- a/v2/src/components/ddaAgreements/generalModal.module.scss
+++ b/v2/src/components/ddaAgreements/generalModal.module.scss
@@ -1,5 +1,9 @@
 .dd-modal {
+  z-index: 1400 !important; // Higher than navbar's 1300
+  
   .MuiPaper-root {
+    z-index: 1400 !important;
+    
     @media (max-width: 900px) {
       width: 100%;
       overflow: hidden;
@@ -12,11 +16,8 @@
   flex-direction: column;
   height: 100vh;
   background-color: #fff;
-  width: 480px;
-  
-  @media (max-width: 900px) {
-    width: 100%;
-  }
+  width: 594px;
+  max-width: 100vw;
 }
 
 .dd-modal-header {
@@ -65,8 +66,12 @@
       
       &.Mui-focused .MuiOutlinedInput-notchedOutline {
         border-color: #1976d2;
-        border-width: 1px;
+        border-width: 2px;
       }
+    }
+    
+    .MuiSelect-root {
+      z-index: auto;
     }
     
     .MuiInputBase-input {
